test/functions/deitz/iterators/test_zip_check2.chpl
for i in zip(1..5, 1..6) do
  writeln(i);
